--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@types/trafiklab",
+    "name": "trafiklab-types",
     "type": "module",
     "version": "1.0.0",
     "description": "TypeScript definitions for Trafiklab API",
